Fix IE7 content overlapping menubar issue

--- a/src/com/googlecode/barongreenback/shared/style.less
+++ b/src/com/googlecode/barongreenback/shared/style.less
@@ -6,7 +6,12 @@
 @blur-radius: 3px;
 
 .content {
-    z-index: -1;
+    z-index: 0;
+    position: relative;
+}
+
+.navbar {
+    z-index: 10;
     position: relative;
 }
 
